Becky's birthday site fixes 2.

--- a/becky/index.html
+++ b/becky/index.html
@@ -17,9 +17,7 @@
 			widget.bind(SC.Widget.Events.READY, function() {
 				console.log('Ready...');
 			});
-			$('#music_control').click(function() {
-				widget.toggle();
-			});
+
 		});
     </script>
 	<script type="text/javascript" language="javascript" src="assets/effects.js"></script>
@@ -40,7 +38,7 @@
             <div class="balloons text-center" id="b5"></div>
             <div class="balloons text-center" id="b6"></div>
             <div class="balloons text-center" id="b7"></div>
-			<div id="photo" align="center" style="padding-top:110px;width:150px;"><img style="border-radius: 70px;" src="assets/img/IMG_0480.JPG" alt="becca" /></div>
+			<div id="photo" align="center" style="padding-top:110px;width:40%;"><img style="border-radius: 70px;" src="assets/img/IMG_0480.JPG" alt="becca" /></div>
             <div id="neon_container">
                 <p><a id="tt" href="#a">IT'S&nbsp;&nbsp;&nbsp;BECKY'S&nbsp;&nbsp;&nbsp;BIRTHDAY!<br /><br />&#x21CA;&#x21CA;&#x21CA;</a><br /></p>
             </div>
@@ -67,7 +65,9 @@
                 Lil' pretty bae... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h4>We all know that deep inside you're just an 18 year old<br /><br />
-                with 10 years of experience adulting!<br /><br />Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion</sup></sup></</sup>!<br /></h4>
+                with 10 years of adulting experience!<br /><br /></h4>
+                <h4><br />&#x1f382</h4>
+                <h3>Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion</sup></sup></</sup>!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>Becky's turning twenty eight,<br /><br />Time to take her on a date!<br /></h2>
                 <h4><br />&#x1f382</h4>
@@ -105,15 +105,14 @@
                     </div> 
                     <div style="float:left;">
                         <img id="cat5" alt="cat6" src="http://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
-                    </div>
+                    </div>-->
                     <div>
                         <h4><br />&#x1f382</h4>
-                        <h3>Поздравление Номер Tри</h3>
-                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eOVh0blgwdlZDV0F2Sm4xWThDV2pTbXo4VGhn/preview" width="840" height="480"></iframe></div>
+                        <h3>A Quick Shout Out From Snowy Siberia</h3>
+                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eOVh0blgwdlZDV0F2Sm4xWThDV2pTbXo4VGhn/preview?t=2s" width="840" height="480"></iframe></div>
                     </div>	
-                </div>
-                <h4><br />&#x1f382<br /></h4>-->
-                <h2 id="toggle">In all seriousness, however, I made this goofy page to say<br /> 
+                <h4><br />&#x1f382<br /></h4>
+                <h2 id="toggle">In all seriousness, however, I thought I'd make this goofy page to say<br /> 
                 that I am lucky to have you in my life and that<br />
                 celebrating this day with you means a lot to me.<br />
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;</h2><br /><br /><br /><br />
@@ -127,7 +126,7 @@
             <div id="subtitle" color="red"><p align="center">December 19<sup>th</sup>, 2018<br /><br /><sup>Увидел ошибку - прими за улыбку :)</sup></p></div>
         </div>
     
-        <iframe id="soundcloud_widget" width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43857250&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+        <iframe id="soundcloud_widget" width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43857250"></iframe>
     </div>
 </body>
 </html>
