Becky's birthday site fixes 3.

--- a/becky/index.html
+++ b/becky/index.html
@@ -17,7 +17,10 @@
 			widget.bind(SC.Widget.Events.READY, function() {
 				console.log('Ready...');
 			});
-
+			$('#music_control').click(function() {
+				widget.toggle();
+			});
+			widget.toggle();
 		});
     </script>
 	<script type="text/javascript" language="javascript" src="assets/effects.js"></script>
@@ -38,7 +41,7 @@
             <div class="balloons text-center" id="b5"></div>
             <div class="balloons text-center" id="b6"></div>
             <div class="balloons text-center" id="b7"></div>
-			<div id="photo" align="center" style="padding-top:110px;width:40%;"><img style="border-radius: 70px;" src="assets/img/IMG_0480.JPG" alt="becca" /></div>
+			<div id="photo" align="center" style="padding-top:110px;"><img style="border-radius: 70px;width:40%;" src="assets/img/IMG_0480.JPG" alt="becca" /></div>
             <div id="neon_container">
                 <p><a id="tt" href="#a">IT'S&nbsp;&nbsp;&nbsp;BECKY'S&nbsp;&nbsp;&nbsp;BIRTHDAY!<br /><br />&#x21CA;&#x21CA;&#x21CA;</a><br /></p>
             </div>
@@ -109,12 +112,13 @@
                     <div>
                         <h4><br />&#x1f382</h4>
                         <h3>A Quick Shout Out From Snowy Siberia</h3>
-                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eOVh0blgwdlZDV0F2Sm4xWThDV2pTbXo4VGhn/preview?t=2s" width="840" height="480"></iframe></div>
+                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eOVh0blgwdlZDV0F2Sm4xWThDV2pTbXo4VGhn/view?t=2s" width="840" height="480"></iframe></div>
                     </div>	
                 <h4><br />&#x1f382<br /></h4>
-                <h2 id="toggle">In all seriousness, however, I thought I'd make this goofy page to say<br /> 
+                <h2 id="toggle">In all seriousness, however, I thought that<br />
+                I'd make this goofy page to say<br /> 
                 that I am lucky to have you in my life and that<br />
-                celebrating this day with you means a lot to me.<br />
+                celebrating this day with you means a lot to me.<br /><br />
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;</h2><br /><br /><br /><br />
             </div>   
             <div style="float:right;">
