--- a/becky/index.html
+++ b/becky/index.html
@@ -24,12 +24,12 @@
     </script>
 	<script type="text/javascript" language="javascript" src="assets/effects.js"></script>
 </head>
-<body onLoad="javascript: SC.Widget(document.getElementById('soundcloud_widget')).toggle();">
+<body>
     <div class="container_main">
         <img src="assets/img/Balloon-Border.png" alt="bb1" width="100%" class="balloon-border" />
         <img src="assets/img/Balloon-Border.png" alt="bb2" width="100%" class="balloon-border2" />
         <div id="top_container"></div>
-        <div id="music_control-container"><span id="music_control">Pause Music</span></div>
+        <div id="music_control-container"><span id="music_control">Play Music</span></div>
         <div id="animation_control-container" align="center">Official Website for Becky's 28th Birthday</div>
         <div id="go-to-top">&#x25B4; Top</div>
         <div id="main">
