Fixing video stream.

--- a/becky/index.html
+++ b/becky/index.html
@@ -63,18 +63,18 @@
                 <h4><br />&#x1f382<br /></h4>
                 <h3>It's Becky's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
                 A special day for a very special girl!<br /><br />
-                Born on Thursday (Wednesday, actually, <sup>I googled it<sup>it just rhymed with the word "Birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
+                Born on Thursday (Wednesday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
                 Lil' pretty bae... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h4>We all know that deep inside you're just an 18 year old<br /><br />
-                with 10 years of adulting experience!<br /><br /></h4>
+                with 10 years of experience being officially an adult!<br /><br /></h4>
                 <h4><br />&#x1f382</h4>
-                <h3>Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion</sup></sup></</sup>!<br /></h3>
+                <h3>Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion<sup>amirite?</sup></sup></sup></sup>!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>Becky's turning twenty eight,<br /><br />Time to take her on a date!<br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h4>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
-                I don't think you would've liked the music there...<br /></h4>
+                <h2>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
+                I don't think you would've liked the music there...<br /></h2>
                 <h4><br />&#x1f382</h4>
                 <h3><a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Ребекке двадцать восемь её о возрасте не спросим!</a><br /><br /></h3>
                 <h4><br />&#x1f382</h4>
@@ -111,8 +111,8 @@
                     <div>
                         <h4><br />&#x1f382</h4>
                         <h3>A Quick Message From Snowy Siberia</h3><br />
-                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/preview" width="840" height="480"></iframe></div>
-                    </div>	
+                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/view?usp=sharing" width="840" height="480"></iframe></div>
+                    </div>
                 <h4><br />&#x1f382<br /></h4>
                 <h2 id="toggle">In all seriousness, however, I thought that<br />
                 I'd make this goofy page to say<br /> 
