Fixing video stream 2.

--- a/becky/index.html
+++ b/becky/index.html
@@ -76,42 +76,16 @@
                 <h2>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
                 I don't think you would've liked the music there...<br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h3><a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Ребекке двадцать восемь её о возрасте не спросим!</a><br /><br /></h3>
+                <h3><a href="https://translate.google.com/ru/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Ребекке двадцать восемь её о возрасте не спросим!</a><br /><br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h3>Forget about the past - you can't change it!<br /><br />
                 Forget about the future - you can't predict it!<br /><br />
                 Forget about the present - I didn't get you one!<sup><sup>ay<sup>y<sup>y<sup>ye!</sup></sup></sup></sup></sup><br /><br /></h3>
                 <h4><br />&#x1f382</h4>
-                <!--<h3>...And Now...<br /></h3>
-                <h4><br />&#x1f382</h4>
-                <h3>Felicitations (I know you read it as felatios) from sunny Siberia:</h3>
-                <div>
-                    <div style="float:right;">
-                        <img id="cat7" alt="cat7" src="http://rs707.pbsrc.com/albums/ww74/onesuleman/miscellaneous_121.gif~c200" onClick="change_cat(this.id);" />
-                    </div> 
-                    <div style="float:left;">
-                        <img id="cat8" alt="cat8" src="http://rs707.pbsrc.com/albums/ww74/onesuleman/miscellaneous_121.gif~c200" onClick="change_cat(this.id);" />
-                    </div>
-                    <div>
-                        <h4><br />&#x1f382</h4>
-                        <h3>Felicitacion Numero Uno<br /></h3>
-                        <div id="pozdr1" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eQzB2TFB3NEpNcUgyaU1saGRhaWNoZTB3NDFR/preview" width="840" height="480"></iframe></div>
-                    </div>
-                </div>
-                <h4><br />&#x1f382</h4>
-                <h2>Gluckwunsch Nummer zwei<br /></h2>
-                <div id="pozdr2" align="center"><iframe src="https://drive.google.com/file/d/0ByOApOtnxc3eU0xPM0lnb3Y5STA/preview" width="840" height="480"></iframe></div>
-                <div>
-                    <div style="float:right;">
-                        <img id="cat6" alt="cat6" src="http://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
-                    </div> 
-                    <div style="float:left;">
-                        <img id="cat5" alt="cat6" src="http://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
-                    </div>-->
                     <div>
                         <h4><br />&#x1f382</h4>
                         <h3>A Quick Message From Snowy Siberia</h3><br />
-                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/view?usp=sharing" width="840" height="480"></iframe></div>
+                        <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/preview" width="840" height="480"></iframe></div>
                     </div>
                 <h4><br />&#x1f382<br /></h4>
                 <h2 id="toggle">In all seriousness, however, I thought that<br />
