Set height to 200px on the top two img elements.

--- a/becky/index.html
+++ b/becky/index.html
@@ -59,34 +59,34 @@
             <div id="b">
                 <div id="putin-cell" align="center">
                     <div style="float:left">
-                        <img id="cat1" alt="cat1" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
+                        <img id="cat1" alt="cat1" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" height="200" />
                     </div>
                     <img id="putya" alt="putya" src="https://i.imgur.com/7PvLrbp.jpg" style="border-radius:90px; cursor:pointer; z-index:1;" />
                     <div style="float:right">
-                        <img id="cat2" alt="cat2" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" />
+                        <img id="cat2" alt="cat2" src="https://i.imgur.com/JwbRHOy.gif" onClick="change_cat(this.id);" height="200" />
                     </div>
                 </div>
             </div>
             
             <div>
-            	<h3>Brace yourself for the finest collection of corniest birthday jokes!<br /><br /></h3>
+            	<h2>Brace yourself for the finest collection of corniest birthday jokes!<br /><br /></h2>
                 <h4><br />&#x1f382<br /></h4>
                 <h3>It's Becky's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
                 A special day for a very special girl!<br /><br />
                 Born on Thursday (Wednesday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
                 Lil' pretty bae... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
-                <h3>We all know that deep inside you're just an 18 year old<br /><br />
-                with 10 years of experience being officially an adult!<br /><br /></h3>
+                <h2>We all know that deep inside you're just an 18 year old<br /><br />
+                with 10 years of experience being officially an adult!<br /><br /></h2>
                 <h4><br />&#x1f382</h4>
                 <h3>Or a Quarter-Centurion with 3 years of experience<sup>and<sup>are<sup>ready for a promotion<sup>amirite?</sup></sup></sup></sup>!<br /></h3>
                 <h4><br />&#x1f382</h4>
-                <h2>Becky's turning twenty eight,<br /><br />Time to take her on a date!<br /></h2>
+                <h4>Becky's turning twenty eight,<br /><br />Time to take her on a date!<br /></h4>
                 <h4><br />&#x1f382</h4>
                 <h2>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
                 I don't think you would've liked the music there...<br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h3><a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Ребекке двадцать восемь её о возрасте не спросим!</a><br /><br /></h3>
+                <h4>"Ребекке двадцать восемь её о возрасте не спросим!"<a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Translation</a><br /><br /></h4>
                 <h4><br />&#x1f382</h4>
                 <h3>Forget about the past - you can't change it!<br /><br />
                 Forget about the future - you can't predict it!<br /><br />
@@ -94,22 +94,22 @@
                 <h4><br />&#x1f382</h4>
                     <div>
                         <h4><br />&#x1f382</h4>
-                        <h3>&#10052; &#10052; &#10052; And Now A Quick Message From Snowy Siberia </h3><br />
+                        <h4>&#10052; &#10052; &#10052; And Now A Quick Message From Snowy Siberia &#10052; &#10052; &#10052;</h4><br />
                         <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/preview" width="840" height="480"></iframe></div>
-                        <h4><br />Translation: <a href="https://translate.google.com/#auto/en/S Dnem Rozhdeniya!" target="_blank">"HAP-PY BIRTH-DAY!"</a></h4>
+                        <h3><br />Translation: <a href="https://translate.google.com/#auto/en/S Dnem Rozhdeniya!" target="_blank">"HAP-PY BIRTH-DAY!"</a></h3>
                     </div>
                 <h4><br />&#x1f382<br /></h4>
-                <h2 id="toggle">In all seriousness, however, I thought that<br />
+                <h2 id="toggle">In all seriousness, though, I thought that<br />
                 I'd make this goofy page to say<br /> 
-                that I am lucky to have you in my life and that<br />
+                that I am lucky to have met you and that<br />
                 celebrating this day with you means a lot to me.<br /><br />
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;</h2><br /><br /><br /><br />
             </div>   
             <div style="float:right;">
-                <img id="cat4" alt="cat4" src="https://media0.giphy.com/media/PdKTOwHgOASGY/giphy.gif?cid=3640f6095c16c038446b4c5655ab9d1d" onClick="change_cat(this.id);" />
+                <img id="cat4" alt="cat4" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
             </div>     		
             <div style="float:left;">
-                <img id="cat3" alt="cat3" src="https://media0.giphy.com/media/PdKTOwHgOASGY/giphy.gif?cid=3640f6095c16c038446b4c5655ab9d1d" onClick="change_cat(this.id);" />
+                <img id="cat3" alt="cat3" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
             </div>
             <div id="subtitle" color="red"><p align="center">December 19<sup>th</sup>, 2018<br /><br /><sup>Увидел ошибку - прими за улыбку :)</sup></p></div>
         </div>
