--- a/becky/index.html
+++ b/becky/index.html
@@ -86,7 +86,7 @@
                 <h2>Glad you made it out of the <a href="https://en.wikipedia.org/wiki/27_Club" target="	_blank">Forever 27 Club</a>!<br /><br />
                 I don't think you would've liked the music there...<br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h4>"Ребекке двадцать восемь её о возрасте не спросим!"<a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Translation</a><br /><br /></h4>
+                <h4>"Ребекке двадцать восемь её о возрасте не спросим!"<br /><a href="https://translate.google.com/#auto/en/Rebekke dvadtsat' vosem' yeyo o vozraste ne sprosim!" target="_blank">Translation</a><br /><br /></h4>
                 <h4><br />&#x1f382</h4>
                 <h3>Forget about the past - you can't change it!<br /><br />
                 Forget about the future - you can't predict it!<br /><br />
@@ -94,7 +94,7 @@
                 <h4><br />&#x1f382</h4>
                     <div>
                         <h4><br />&#x1f382</h4>
-                        <h4>&#10052; &#10052; &#10052; And Now A Quick Message From Snowy Siberia &#10052; &#10052; &#10052;</h4><br />
+                        <h3>&#10052; &#10052; &#10052; And Now A Quick Message From Snowy Siberia &#10052; &#10052; &#10052;</h3><br />
                         <div id="pozdr3" align="center"><iframe src="https://drive.google.com/file/d/1kJckBeMjKIfdeDKkQYzfDIv70XU6IzdA/preview" width="840" height="480"></iframe></div>
                         <h3><br />Translation: <a href="https://translate.google.com/#auto/en/S Dnem Rozhdeniya!" target="_blank">"HAP-PY BIRTH-DAY!"</a></h3>
                     </div>
