--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                 </section>
-                <iframe id="sc_widget" width="100%" height="166" frameborder="no" scrolling="no" src="https://w.soundcloud.com/player/?show_user=false&url=https://api.soundcloud.com/tracks/"></iframe> 
+                <iframe id="sc_widget" width="100%" height="166" frameborder="no" scrolling="no" src="https://w.soundcloud.com/player/?show_user=false&url=http://api.soundcloud.com/tracks/"></iframe> 
             </div>
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
