Few Fixes to Nathalia's 24th bday website.

--- a/24/index.html
+++ b/24/index.html
@@ -69,19 +69,20 @@
             </div>
             
             <div>
+                <h4><br />&#x1f382<br /></h4>
             	<h2>Brace yourself for the finest collection of corniest birthday jokes!<br /><br /></h2>
                 <h4><br />&#x1f382<br /></h4>
                 <h3>It's Nathalia's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
                 A special day for a very special girl!<br /><br />
                 Born on Thursday (Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
-                Lil' pretty babe... with a very special soul!<br /></h3>
+                Lil' happy babe... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>We all know that deep inside you're just an 18 year old<br /><br />
                 with 6 years of experience being officially an adult!<br /><br /></h2>
                 <h4><br />&#x1f382</h4>
-                <h4>Nathalia's turning twenty four,<br /><br />Time to take her on a tour (of the US)!<br /></h4>
+                <h4>Nathalia's turning twenty four,<br /><br />Time to take her for a tour (of the US)!<br /></h4>
                 <h4><br />&#x1f382</h4>
-                <h4>"Наталье двадцать четыре поздравлают во всем мире!!"<br /><br /><a href="https://translate.google.com/#auto/en/Nathalia%20dvadtsat'%20chetyre%20vosklikayut%20vo%20vsem%20mire!" target="_blank">Translation</a><br /><br /></h4>
+                <h4>"Наталье двадцать четыре восклицают во всем мире!!"<br /><br /><a href="https://translate.google.com/#auto/en/Nathalia%20dvadtsat'%20chetyre%vosklicayut%20vo%20vsem%20mire!" target="_blank">Translation</a><br /><br /></h4>
                 <h4><br />&#x1f382</h4>
                 <h3>Forget about the past - you can't change it!<br /><br />
                 Forget about the future - you can't predict it!<br /><br />
@@ -91,8 +92,8 @@
                 I'd make this goofy page to say<br /> 
                 that I am glad to have met you and am<br />
                 lucky to be celebrating your first birthday in the US with you!<br /><br />
-                Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;</h2><br /><br /><br /><br />
-                By the way, all these cats are the same cats your rescued back home<br /><br /><br />
+                Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
+                By the way, all these cats are the same cats your rescued back home</h2><br /><br /><br />
             </div>   
             <div style="float:right;">
                 <img id="cat4" alt="cat4" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
@@ -100,7 +101,7 @@
             <div style="float:left;">
                 <img id="cat3" alt="cat3" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
             </div>
-            <div id="subtitle" color="red"><p align="center">December 19<sup>th</sup>, 2018<br /><br /><sup>Увидел ошибку - прими за улыбку :)</sup></p></div>
+            <div id="subtitle" color="red"><p align="center">April 1<sup>st</sup>, 2019<br /><br /><sup>Увидел ошибку - прими за улыбку :)</sup></p></div>
         </div>
     
         <iframe id="soundcloud_widget" width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43857250"></iframe>
