--- a/24/index.html
+++ b/24/index.html
@@ -73,27 +73,27 @@
             	<h2>Brace yourself for the finest collection of corniest birthday jokes!<br /><br /></h2>
                 <h4><br />&#x1f382<br /></h4>
                 <h3>It's Nathalia's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
-                A special day for a very special girl!<br /><br />
-                Born on Thursday (Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
-                Lil' happy babe... with a very special soul!<br /></h3>
+                A special day for a very special girl<br /><br />
+                Born on a Thursday (Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
+                Lil' happy babe... with a very special soul<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>We all know that deep inside you're just an 18 year old<br /><br />
-                with 6 years of experience being officially an adult!<br /><br /></h2>
+                with 6 years of experience being officially an adult<br /><br /></h2>
                 <h4><br />&#x1f382</h4>
                 <h4>Nathalia's turning twenty four,<br /><br />Time to take her for a tour (of the US)!<br /></h4>
                 <h4><br />&#x1f382</h4>
-                <h4>"Наталье двадцать четыре восклицают во всем мире!!"<br /><br /><a href="https://translate.google.com/#auto/en/Nathalia%20dvadtsat'%20chetyre%vosklicayut%20vo%20vsem%20mire!" target="_blank">Translation</a><br /><br /></h4>
+                <h4>"Наталье двадцать четыре<br />восклицают во всем мире!"<br /><br /><a href="https://translate.google.com/#auto/en/Nathalia%20dvadtsat'%20chetyre%vosklicayut%20vo%20vsem%20mire!" target="_blank">Translation</a><br /><br /></h4>
                 <h4><br />&#x1f382</h4>
-                <h3>Forget about the past - you can't change it!<br /><br />
-                Forget about the future - you can't predict it!<br /><br />
+                <h3>Forget about the past - you can't change it<br /><br />
+                Forget about the future - you can't predict it<br /><br />
                 Forget about the present - I didn't get you one!<sup><sup>ay<sup>y<sup>y<sup>ye!</sup></sup></sup></sup></sup><br /><br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2 id="toggle">In all seriousness though I just thought that<br />
                 I'd make this goofy page to say<br /> 
-                that I am glad to have met you and am<br />
-                lucky to be celebrating your first birthday in the US with you!<br /><br />
+                that I am glad to have met you and am lucky<br />
+                to be part of your First American Birthday celebrations!<br /><br />
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
-                By the way, all these cats are the same cats your rescued back home</h2><br /><br /><br />
+                By the way, all the dancing cats on this page are the same cats your rescued back home</h2><br /><br /><br />
             </div>   
             <div style="float:right;">
                 <img id="cat4" alt="cat4" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
