Few Fixes numero tres to Nathalia's 24th bday website.

--- a/24/index.html
+++ b/24/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container_main">
-    	<div class="overlay">
+    	<div class="overlay" width="100%">
   			<div class="button">MAKE SURE THE SOUND IS ON<br /><br />&#9658;</div>
         </div>
         <img src="assets/img/Balloon-Border.png" alt="bb1" width="100%" class="balloon-border" />
@@ -74,8 +74,8 @@
                 <h4><br />&#x1f382<br /></h4>
                 <h3>It's Nathalia's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
                 A special day for a very special girl<br /><br />
-                Born on a Thursday (Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
-                Lil' happy babe... with a very special soul<br /></h3>
+                Born on a Thursday<br />(Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
+                Very happy lil' babe... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>We all know that deep inside you're just an 18 year old<br /><br />
                 with 6 years of experience being officially an adult<br /><br /></h2>
@@ -92,7 +92,7 @@
                 I'd make this goofy page to say<br /> 
                 that I am glad to have met you and am lucky<br />
                 to be part of your First American Birthday celebrations!<br /><br />
-                Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382Ruski&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
+                Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382V&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
                 By the way, all the dancing cats on this page are the same cats your rescued back home</h2><br /><br /><br />
             </div>   
             <div style="float:right;">
