--- a/24/index.html
+++ b/24/index.html
@@ -75,7 +75,7 @@
                 <h3>It's Nathalia's Birthday! Tom<sup>Tom<sup>Tom<sup>Tom<sup>Who's Tom?!</sup></sup></sup></sup><br /><br />
                 A special day for a very special girl<br /><br />
                 Born on a Thursday<br />(Saturday, actually, <sup>I googled it<sup>it just rhymed with "birthday" better..<sup>Let's pretend it was Thursday</sup></sup></sup>)<br /><br />
-                Very happy lil' babe... with a very special soul!<br /></h3>
+                A very happy lil' babe... with a very special soul!<br /></h3>
                 <h4><br />&#x1f382</h4>
                 <h2>We all know that deep inside you're just an 18 year old<br /><br />
                 with 6 years of experience being officially an adult<br /><br /></h2>
@@ -91,9 +91,10 @@
                 <h2 id="toggle">In all seriousness though I just thought that<br />
                 I'd make this goofy page to say<br /> 
                 that I am glad to have met you and am lucky<br />
-                to be part of your First American Birthday celebrations!<br /><br />
+                to be part of your First American Birthday celebrations! &#x31;&#xFE0F;&#x20E3;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1f382V&nbsp;&#x1F389;<br /><br />
                 Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382V&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
-                By the way, all the dancing cats on this page are the same cats your rescued back home</h2><br /><br /><br />
+                <br /><br />&hearts;&nbsp;&#x1F1E7;&#x1F1F7;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1F1F7;&#x1F1FA;&#x1f382&hearts;<br /><br /><br /><br />
+                By the way, all the dancing cats on this page are the same cats your rescued back home!</h2><br /><br /><br />
             </div>   
             <div style="float:right;">
                 <img id="cat4" alt="cat4" src="https://rs240.pbsrc.com/albums/ff237/mareesme/Funny%20cats%20and%20dogs%20and%20wildlife/cats38.gif~c200" onClick="change_cat(this.id);" />
