--- a/24/index.html
+++ b/24/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container_main">
-    	<div class="overlay" width="100%">
+    	<div class="overlay">
   			<div class="button">MAKE SURE THE SOUND IS ON<br /><br />&#9658;</div>
         </div>
         <img src="assets/img/Balloon-Border.png" alt="bb1" width="100%" class="balloon-border" />
@@ -91,9 +91,10 @@
                 <h2 id="toggle">In all seriousness though I just thought that<br />
                 I'd make this goofy page to say<br /> 
                 that I am glad to have met you and am lucky<br />
-                to be part of your First American Birthday celebrations! &#x31;&#xFE0F;&#x20E3;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1f382V&nbsp;&#x1F389;<br /><br />
-                Happy Birthday!<br /><br />&hearts;&nbsp;&#x1f382V&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
-                <br /><br />&hearts;&nbsp;&#x1F1E7;&#x1F1F7;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1F1F7;&#x1F1FA;&#x1f382&hearts;<br /><br /><br /><br />
+                to be part of your First American Birthday celebrations!<br />
+                &#x31;&#xFE0F;&#x20E3;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1f382&nbsp;&#x1F389;<br /><br />
+                Happy Birthday!<br /><br /><br /><br />&hearts;&nbsp;&#x1f382V&nbsp;&#x1f382&hearts;<br /><br /><br /><br />
+                &nbsp;&#x1F1E7;&#x1F1F7;&nbsp;&#x1F1FA;&#x1F1F8;&nbsp;&#x1F1F7;&#x1F1FA;<br /><br /><br /><br />
                 By the way, all the dancing cats on this page are the same cats your rescued back home!</h2><br /><br /><br />
             </div>   
             <div style="float:right;">
