--- a/24/index.html
+++ b/24/index.html
@@ -52,7 +52,7 @@
             <div class="balloons text-center" id="b7"></div>
 			<div id="photo" align="center" style="padding-top:110px;"><img style="border-radius: 70px;width:150px;" src="assets/img/IMG_0480.png" alt="nathalia" /></div>
             <div id="neon_container">
-                <p><a id="tt" href="#a">IT'S&nbsp;&nbsp;&nbsp;NATHALIA'S&nbsp;&nbsp;&nbsp;BIRTHDAY!<br /><br />&#x21CA;&#x21CA;&#x21CA;</a><br /></p>
+                <p><a id="tt" href="#a">IT'S&nbsp;&nbsp;N'S&nbsp;&nbsp;B'DAY!<br /><br />&#x21CA;&#x21CA;&#x21CA;</a><br /></p>
             </div>
             <div id="a" style="height:150px;">
             </div>
