Added Integrations Specialist stuff.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am Vadim, an App Developer by day and a Business Analytics grad student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Computer Science and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a> and an <a href="http://bab.sn/mba" target="_blank">MBA</a> from <a href="http://www.babson.edu/news-events/babson-news/Pages/us-news-best-graduate-schools-ranking.aspx" target="_blank">the most entrepreneurial school in the nation</a>. I constantly strive to pair up my technical background with an entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a class="sc" style="cursor:pointer">music</a>, read about FI/RE and investing, and generally try to expand my <a onClick="javascript:document.getElementById('mf').src=((document.getElementById('mf').src.search('8lFwld7')>0)?'https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapit%C3%A1n-jack-captain-jack.jpg':'https://i.imgur.com/8lFwld7.jpg');" style="cursor:pointer;">horizons</a>.</p>
+                            <p>I am Vadim, an App Developer / Integrations Specialist by day and a Business Analytics grad student by night at <a href="http://bab.sn/msba" target="_blank">Babson</a>. I am passionate about engineering, analytics, innovation, investments, and all things technology. I have a degree in Computer Science and Applied Math from <a href="http://wit.edu" target="_blank">WIT</a> and an <a href="http://bab.sn/mba" target="_blank">MBA</a> from <a href="http://www.babson.edu/news-events/babson-news/Pages/us-news-best-graduate-schools-ranking.aspx" target="_blank">the most entrepreneurial school in the nation</a>. I constantly strive to pair up my technical background with my entrepreneurial mindset to build something <a href="./25" class="undotted-link" style="color:#49515a">awe</a>some. Outside of my day to day duties I ride my bike, write and play <a class="sc" style="cursor:pointer">music</a>, read about FI/RE and investing, and generally try to expand my <a onClick="javascript:document.getElementById('mf').src=((document.getElementById('mf').src.search('8lFwld7')>0)?'https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapit%C3%A1n-jack-captain-jack.jpg':'https://i.imgur.com/8lFwld7.jpg');" style="cursor:pointer;">horizons</a>.</p>
                         </div>
                     </div>                
                 </section>
@@ -96,8 +96,12 @@
                     <div class="section-inner">
                         <h2 class="heading"><a href="resume.html#xp" target="_blank">Work Experience</a></h2>
                         <div class="content">
+                        	<div class="item">
+                                <h3 class="title">Intergrations Specialist - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2019 - Present)</span></h3>
+                                <p><a href="resume.html#empl">APIs, APIs everywhere!</a></p>
+                            </div>
                             <div class="item">
-                                <h3 class="title">Application Developer - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2014 - Present)</span></h3>
+                                <h3 class="title">Application Developer - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2014 - 2019)</span></h3>
                                 <p><a href="resume.html#empl">"Luke, I am your..."&reg;</a></p>
                             </div>
                             <div class="item">
