--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en" xmlns:og="http://ogp.me/ns#"> <!--<![endif]-->
 <head>
-    <title>Vadim Manokhin - Application Developer</title>
+    <title>Vadim Manokhin - Integrations Specialist / Application Developer</title>
     <!-- meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,11 +23,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Vadim Manokhin">
     <meta name="author" content="Vadim Manokhin">
-    <meta name="keywords" content="Manokhin Vadim Full Stack Engineer Salesforce SFDC Informatica APEX ColdFusion Web Application Software Developer Resume"> 
+    <meta name="keywords" content="Manokhin Vadim Full Stack Engineer Integrations Salesforce SFDC Informatica APEX ColdFusion Web Application Software Developer Resume"> 
     
     
-    <meta property="og:description" content="Vadim Manokhin - Application Developer">
-    <meta property="og:title" content="Vadim Manokhin - Application Developer" />
+    <meta property="og:description" content="Vadim Manokhin - Integrations Specialist / Application Developer">
+    <meta property="og:title" content="Vadim Manokhin - Integrations Specialist / Application Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://manokhinv.github.io" />
 
@@ -72,7 +72,7 @@
             <img id="mf" class="profile-image img-responsive pull-left" src="https://i.imgur.com/8lFwld7.jpg" alt="Vadim's Missing Picture" />
             <div class="profile-content pull-left">
                 <h1 class="name">Vadim Manokhin</h1>
-                <h2 class="desc">Application Developer</h2>   
+                <h2 class="desc">Integrations Specialist / Application Developer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://linkedin.com/in/manokhin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/manokhinv" target="_blank"><i class="fa fa-github-alt"></i></a></li>             
@@ -98,7 +98,7 @@
                         <div class="content">
                         	<div class="item">
                                 <h3 class="title">Intergrations Specialist - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2019 - Present)</span></h3>
-                                <p><a href="resume.html#empl">APIs, APIs everywhere!</a></p>
+                                <p><a href="resume.html#empl">APIs, API everywhere!</a></p>
                             </div>
                             <div class="item">
                                 <h3 class="title">Application Developer - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2014 - 2019)</span></h3>
