--- a/resume.html
+++ b/resume.html
@@ -216,8 +216,8 @@
     </p>
 	<script>
 		!function(){
-			var tn = [128108639,128108242,128106485,128104603,128104473,128102268,508699893,652747388], 
-				st = ['219BE','O39hp','uRVsi','zHczG','Gore6','N5Uqh','aYLov',''], 
+			var tn = [128108639,128108242,128106485,128104603,128104473,128102268,508699893,652747388,657029474,658799657,656527964,655095326], 
+				st = ['219BE','O39hp','uRVsi','zHczG','Gore6','N5Uqh','aYLov','','','OLsW6','',''], 
 				r = Math.floor(Math.random()*tn.length);
 			document.getElementById('sc').href+= tn[r] + '&secret_token=s-' + st[r]; 
 		}();
