--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                         <div class="content">
                         	<div class="item">
                                 <h3 class="title">Intergrations Specialist - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2019 - Present)</span></h3>
-                                <p><a href="resume.html#empl">APIs, APIs everywhere!</a></p>
+                                <p><a href="resume.html#empl" target="_blank">APIs, APIs everywhere!</a></p>
                             </div>
                             <div class="item">
                                 <h3 class="title">Application Developer - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2014 - 2019)</span></h3>
-                                <p><a href="resume.html#empl">"Luke, I am your..."&reg;</a></p>
+                                <p><a href="resume.html#empl" target="_blank">"Luke, I am your..."&reg;</a></p>
                             </div>
                             <div class="item">
                                 <h3 class="title">Application Developer Intern - <span class="place"><a href="http://bab.sn" target="_blank">Babson College, Babson Park, MA</a></span> <span class="year">(2012 - 2014)</span></h3>
