Fixed the board sentence and updated the update date.

--- a/resume.html
+++ b/resume.html
@@ -200,7 +200,7 @@
                 <dd>- I've been a member of &Tau;&Alpha;&Pi; (<a href="http://taualphapi.org/" target="_blank">Tau Alpha Pi</a>, Massachusetts Alpha Chapter) - the professional honor society for engineering technology - since 2013.</dd>
                 <dd>- Occasionally, I participate in the local Boston technology meetups, hackathons, and user group activities such as <a href="https://www.meetup.com/Boston_New_Technology/" target="_blank">BNT</a> (Boston New Technology), <a href="http://aug.atlassian.com/cities/bostonma" target="_blank">Boston AUG</a> (Atlassian User Group), <a href="http://codeforboston.org/" target="_blank">Code for Boston</a> Hack Nights, and others.</dd>
                 <dd>- I'm a frequent <a href="https://kiva.org/" target="_blank">Kiva.org</a> lender and encourage you to become one.</dd>
-                <dd>- I sit on the board of a <a href="https://commonwealthkitchen.org/" target="_blank">local nonprofit</a> as a Babson Board Fellow.</dd>
+                <dd>- I sat on the board of a <a href="https://commonwealthkitchen.org/" target="_blank">local nonprofit</a> as a Babson Board Fellow.</dd>
                 <dd>- Outside of my day to day duties as a developer I enjoy cycling and running (recently finished a 5k in <a href="https://www.jpmorganchasecc.com/results/search.php?city_id=4" target="_blank">under 20 minutes</a> - woohoo!), creating and playing <a href="https://w.soundcloud.com/player/?url=https://api.soundcloud.com/tracks/" target="_blank" id="sc" style="cursor:pointer">music</a>, learning new things, and generally expanding my <a href="https://i.pinimg.com/736x/05/d9/50/05d950ac03dffd4a9fdac537c08206ab--kapitán-jack-captain-jack.jpg" target="_blank">horizons</a>.</dd>
             </dl>
         </li>
@@ -208,7 +208,7 @@
     
     <p id="fin">
         <a href="https://manokhinv.github.io/" target="_blank">http://manokhinv.github.io</a> » resume<br>
-        Updated 7/2018
+        Updated 8/2019
     </p>
 	<script>
 		!function(){
